--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -31,8 +31,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button uploadimageform type="submit" class="btn btn-primary">Use image</button>
+                    <button uploadimageform type="submit" class="icabutton">Use image</button>
                 </div>
             </form>
         </div>
@@ -55,7 +54,6 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="icabutton" data-dismiss="modal">Cancel</button>
                     <button uploadlogo type="submit" class="icabutton">Use logo</button>
                 </div>
             </form>
@@ -74,8 +72,7 @@
                 <textarea textform name="content" id="edit"></textarea>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button uploadtextform id="submittextform" type="button" class="btn btn-primary">Use text</button>
+                <button uploadtextform id="submittextform" type="button" class="icabutton">Use text</button>
             </div>
         </div>
     </div>
@@ -93,8 +90,7 @@
                 <input class="form-control" type="url" id="youtubeinput">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button uploadyoutubeform id="submityoutubeform" type="button" class="btn btn-primary">Use YouTube link</button>
+                <button uploadyoutubeform id="submityoutubeform" type="button" class="icabutton">Use YouTube link</button>
             </div>
         </div>
     </div>
