--- a/public/views/editproject.html
+++ b/public/views/editproject.html
@@ -14,8 +14,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button uploadimageform type="submit" class="btn btn-primary">Use image</button>
+                    <button uploadimageform type="submit" class="icabutton">Use image</button>
                 </div>
             </form>
         </div>
@@ -38,8 +37,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button uploadlogoform type="submit" class="btn btn-primary">Use logo</button>
+                    <button uploadlogoform type="submit" class="icabutton">Use logo</button>
                 </div>
             </form>
         </div>
@@ -57,8 +55,7 @@
                 <textarea textform name="content" id="edit"></textarea>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button uploadtextform id="submittextform" type="button" class="btn btn-primary">Use text</button>
+                <button uploadtextform id="submittextform" type="button" class="icabutton">Use text</button>
             </div>
         </div>
     </div>
@@ -76,8 +73,7 @@
                 <input class="form-control" type="url" id="youtubeinput">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button uploadyoutubeform id="submityoutubeform" type="button" class="btn btn-primary">Use YouTube link</button>
+                <button uploadyoutubeform id="submityoutubeform" type="button" class="icabutton">Use YouTube link</button>
             </div>
         </div>
     </div>
