--- a/public/views/about.html
+++ b/public/views/about.html
@@ -2,46 +2,50 @@
 
     <img src="/images/hanabout.jpg">
 
-    <div class="col-xs-12 col-sm-4 about-grey">
-        
-        <div class="about-circle">
-            <div class="inner-circle">
-                HAN
+    <div class="about-wrapper">
+
+        <div class="col-xs-12 col-sm-4 about-grey">
+            
+            <div class="about-circle">
+                <div class="inner-circle">
+                    HAN
+                </div>
+            </div>
+
+            <div class="about-content">
+                <p>HAN University of Applied Sciences offer almost every type of professional course related to the following domains: education, social studies, commerce, communications, business administration, law, economics, engineering, built environment, applied sciences, IT, health, nursing and sports and exercise.</p>
+                <p><a href="http://www.han.nl/">www.han.nl</a></p>
+            </div>
+
+        </div>
+
+        <div class="col-xs-12 col-sm-4 about-yellow">
+
+            <div class="about-circle">
+                <div class="inner-circle">
+                    ICA
+                </div>
+            </div>
+
+            <div class="about-content">
+                <p>Informatica Communications Academy (ICA) provids the HBO course and graduate programs at HAN University of Applied Sciences in the field of computer science, digital media and communications.</p>
+                <p><a href="http://www.han.nl/gebied/informatica-media-communicatie/">www.han.nl/gebied/informatica-media-communication/</a></p>   
             </div>
         </div>
 
-        <div class="about-content">
-            <p>HAN University of Applied Sciences offer almost every type of professional course related to the following domains: education, social studies, commerce, communications, business administration, law, economics, engineering, built environment, applied sciences, IT, health, nursing and sports and exercise.</p>
-            <p><a href="http://www.han.nl/">www.han.nl</a></p>
-        </div>
+        <div class="col-xs-12 col-sm-4 about-grey">
 
-    </div>
-
-    <div class="col-xs-12 col-sm-4 about-yellow">
-
-        <div class="about-circle">
-            <div class="inner-circle">
-                ICA
+            <div class="about-circle">
+                <div class="inner-circle">
+                    ICA PRESENTS
+                </div>
             </div>
-        </div>
 
-        <div class="about-content">
-            <p>Informatica Communications Academy (ICA) provids the HBO course and graduate programs at HAN University of Applied Sciences in the field of computer science, digital media and communications.</p>
-            <p><a href="http://www.han.nl/gebied/informatica-media-communicatie/">www.han.nl/gebied/informatica-media-communication/</a></p>   
-        </div>
-    </div>
-
-    <div class="col-xs-12 col-sm-4 about-grey">
-
-        <div class="about-circle">
-            <div class="inner-circle">
-                ICA PRESENTS
+            <div class="about-content">
+                <p>ICA PRESENTS is a juried show that is done through the ICA department at the HAN. Students can submit and present their current semester projecs for a chance to win money.</p>
+                <p><a href="http://www.icapresents.nl/">www.icaprestents.nl</a></p> 
             </div>
-        </div>
 
-        <div class="about-content">
-            <p>ICA PRESENTS is a juried show that is done through the ICA department at the HAN. Students can submit and present their current semester projecs for a chance to win money.</p>
-            <p><a href="http://www.icapresents.nl/">www.icaprestents.nl</a></p> 
         </div>
 
     </div>
