--- a/public/views/index.html
+++ b/public/views/index.html
@@ -125,7 +125,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
                         <li><a href="/projects">Student Work</a></li>
-                        <li><a href="/profiles">Profiles</a></li>
+                        <li><a href="/profiles">Courses</a></li>
                         <li><a href="/about">About</a></li>
                     </ul>
         
