--- a/public/views/adminpanel.html
+++ b/public/views/adminpanel.html
@@ -264,7 +264,7 @@
                                 <td>{{ user._id }}</td>
                                 <td>{{ user.firstname }}</td>
                                 <td>{{ user.lastname }}</td>
-                                <td><a href="" ng-click="getUserData(user._id)">Edit</a> / <a href="" ng-click="removeUser(user._id)">Delete</a></td>
+                                <td><a href="" ng-click="getUserData(user._id)">Edit</a><span ng-hide="user.role == 'admin'"> / </span><a href="" ng-hide="user.role == 'admin'" ng-click="removeUser(user._id)">Delete</a></td>
                             </tr>
                             
                         </table>
