--- a/public/views/editproject.html
+++ b/public/views/editproject.html
@@ -21,10 +21,33 @@
     </div>
 </div>
 
+<div class="modal fade" id="bannerModal" tabindex="-1" role="dialog" aria-labelledby="bannerModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form id="bannerform" class="bannerform" enctype="multipart/form-data"> 
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="bannerModalLabel">Banner</h4>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <input id="inputImage" type="file" accept="image/*" name="image">
+
+                        <img ng-show="image" ng-src="{{ image.url }}" type="{{ image.file.type }}">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button uploadbanner type="submit" class="icabutton">Use banner</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <div class="modal fade" id="logoModal" tabindex="-1" role="dialog" aria-labelledby="logoModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form id="logoform" enctype="multipart/form-data"> 
+            <form id="logoform" class="logoform" enctype="multipart/form-data"> 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                     <h4 class="modal-title" id="logoModalLabel">Logo</h4>
@@ -37,7 +60,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button uploadlogoform type="submit" class="icabutton">Use logo</button>
+                    <button uploadlogo type="submit" class="icabutton">Use logo</button>
                 </div>
             </form>
         </div>
@@ -138,10 +161,8 @@
 
         <div class="form-group projectsemesterform">
 
-            <select class="form-control" ng-model="formData.semesterid" id="projectsemester">
-                <option value="">Please select a semester</option>
-                <option value="" disabled>-----------------------------------------------</option>
-                <option ng-selected="{{ project.semesterid == semester._id }}" ng-repeat="semester in semesters" value="{{ semester._id }}">{{ semester.name }}</option>
+            <select class="form-control" ng-model="project.semesterid" id="projectsemester">
+                <option ng-selected="{{ project.semesterid == semester._id }}" ng-repeat="semester in semesters" value="{{ semester._id }}">{{ semester._id }} {{ semester.name }}</option>
             </select>
             
         </div>
@@ -152,7 +173,7 @@
 
 </div>
 
-<div class="container">
+<div class="container error-container">
     <div class="alert alert-danger error-title alert-dismissible fade in" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
         <strong>Oeps!</strong> You need to have an awesome project name!
