--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -19,13 +19,15 @@
             <div class="customfield">
                 <label for="Semester">Semesters</label>
                 <select ng-model="search.$">
-                    <option id="Semester" ng-repeat="semester in semesters" value=" {{ semester._id }} "> {{ semester.name }}</option>
+                    <option value="">-- Select semester</option>
+                    <option ng-repeat="semester in semesters" value=" {{ semester._id }} "> {{ semester.name }}</option>
                 </select>
             </div>
 
             <div class="customfield">
                 <label for="Semester-Date-field">Semester date</label>
                 <select ng-model="search.$">
+                    <option value="">-- Select date</option>
                     <option id="date">2014, p1</option>
                 </select>
             </div>
