--- a/public/views/about.html
+++ b/public/views/about.html
@@ -4,7 +4,7 @@
 
     <div class="about-wrapper">
 
-        <div class="col-xs-12 col-sm-4 about-grey">
+        <div class="col-sm-12 about-grey">
             
             <div class="about-circle">
                 <div class="inner-circle">
@@ -19,7 +19,7 @@
 
         </div>
 
-        <div class="col-xs-12 col-sm-4 about-yellow">
+        <div class="col-sm-12 about-yellow">
 
             <div class="about-circle">
                 <div class="inner-circle">
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-4 about-grey">
+        <div class="col-sm-12 about-grey">
 
             <div class="about-circle">
                 <div class="inner-circle">
