--- a/public/views/index.html
+++ b/public/views/index.html
@@ -155,25 +155,25 @@
     </div>
         </div>
 
-         <footer class="footer" ng-controller="FooterController">
-            <div>
+         <footer class="footer container" ng-controller="FooterController">
+                <div class="col-sm-12 col-md-4 contactheader">
+                    <h3 >Contact</h3>
+                        <div class="row contactrow" >
+                            <div class="col-sm-6 ">
+                                <p>Adress: Ruitenberglaan 26<br>
+                                    6826 CC Arnhem<br></p>
+                            </div>
+                            <div class="col-sm-6">
+                                    <p>Telephone: (026) 365 82 82<br>
+                                    E-mail: info@han.nl</p>
+                            </div>
+                        </div>    
+                    </div>
                 
-                <div class="col-sm-4 contactheader">
-                    <h3 style= "text-align: left;">Contact</h3>
-                    <div class="col-sm-6 contactpadding">
-                            <p>Adress: Ruitenberglaan 26<br>
-                                6826 CC Arnhem<br></p>
-                    </div>
-                    <div class="col-sm-6">
-                            Telephone: (026) 365 82 82<br>
-                            E-mail: info@han.nl</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <h3><span class="fa fa-copyright"></span> Han University 2015</h3>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6 col-md-4">
                     <h3><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span class="fa fa-facebook"></span></a></h3>
                 </div>              
             </div>
