--- a/public/views/editprofile.html
+++ b/public/views/editprofile.html
@@ -13,18 +13,16 @@
                         <img ng-show="image" ng-src="{{ image.url }}" type="{{ image.file.type }}">
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button uploadimageprofileform type="submit" class="btn btn-primary">Use image</button>
+                <div class="modal-footer text-center">
+                    <button uploadimageprofileform type="submit" class="icabutton">Use image</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="project-actions">
-        <a saveportfolio href="#" id="save-portfolio" class="save-project btn btn-default text-center">Save Portfolio</a>
-    </div>
+<div class="profile-actions-container">
+    <a saveportfolio href="#" id="save-portfolio" class="save-project icabutton">Save Portfolio</a>
 </div>
 
 <div class="profileinformation clearfix text-center">
@@ -71,10 +69,16 @@
         <div class="col-xs-12 col-md-4" ng-show="$index == 0 || $index > 0">
             <a href="/project/{{project._id}}">
                 <div class="unplaced" style="background: url({{ project.banner }}) center center no-repeat; background-size:cover;">
-<!--                <img src=" {{ project.banner }} " alt="banner"> -->
+                    <div class="plus-icon-editor edit-icon-editor">
+                        <i class="fa fa-pencil-square-o"></i>
+                    </div>
                     <div class="page-info" >
-                        <h3>{{ project.title }}</h3>
-                        <p class="visibility-of-votes">{{ project.votes }}</p>
+                        <div class="visibility-of-title inner-circle">
+                            {{ project.title }}  
+                        </div>
+                        <div class="visibility-of-votes inner-circle">
+                            <i class="fa fa-heart"></i> {{ project.votes }}
+                        </div>
                     </div>
                 </div>
             </a>
