--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -19,10 +19,13 @@
         <div class="col-xs-12 col-md-4" ng-show="$index == 0 || $index > 0">
             <a href="/project/{{project._id}}">
                 <div class="unplaced" style="background: url({{ project.banner }}) center center no-repeat; background-size:cover;">
-<!--                <img src=" {{ project.banner }} " alt="banner"> -->
                     <div class="page-info" >
-                        <h3>{{ project.title }}</h3>
-                        <p class="visibility-of-votes">{{ project.votes }}</p>
+                        <div class="visibility-of-title inner-circle">
+                            {{ project.title }}  
+                        </div>
+                        <div class="visibility-of-votes inner-circle">
+                            <i class="fa fa-heart"></i> {{ project.votes }}
+                        </div>
                     </div>
                 </div>
             </a>
