--- a/public/views/index.html
+++ b/public/views/index.html
@@ -165,15 +165,15 @@
                             </div>
                             <div class="col-sm-6">
                                     <p>Telephone: (026) 365 82 82<br>
-                                    E-mail: info@han.nl</p>
+                                    E-mail: info@han.nl</p><br>
                             </div>
                         </div>    
                     </div>
                 
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4" style="text-align: center;">
                     <h3><span class="fa fa-copyright"></span> Han University 2015</h3>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4" style="text-align: center;">
                     <h3><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span class="fa fa-facebook"></span></a></h3>
                 </div>              
             </div>
